Build on any tag syntax

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,8 +2,7 @@ name: Create and publish a Docker image
 
 on:
   push:
-    # Publish semver tags as releases.
-    tags: [ 'v*.*.*' ]
+    tags: [ '*' ]
 
 env:
   REGISTRY: ghcr.io
